[package]
name = "housecraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = 1

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
comfy-table = "6.1.4"
console = "0.15.5"
csv = "1.2.1"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
mimalloc = { version = "0.1.34", default-features = false }
num_cpus = "1.15.0"
once_cell = "1.17.1"
rayon = "1.7.0"
regex = "1.7.3"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
stable-vec = "0.4.0"
