[package]
name = "housecraft"
version = "0.3.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Can not build RelWithDebInfo on Windows. See https://github.com/ERGO-Code/HiGHS/issues/1271
[profile.release]
debug = true

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
comfy-table = "6.1.4"
console = "0.15.5"
csv = "1.2.1"
env_logger = "0.10.0"
highs-sys = { version = "1.5.0", git = "https://github.com/Thell/highs-sys.git", branch = "highs-quiet-parallel", features = [
    "highs_release",
    "ninja",
] }
itertools = "0.10.5"
lazy_static = "1.4.0"
libz-sys = "1.1.8"
log = "0.4.17"
mimalloc = { version = "0.1.34", default-features = false }
num_cpus = "1.15.0"
once_cell = "1.17.1"
rand = "0.8.5"
rayon = "1.7.0"
regex = "1.7.3"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
stable-vec = "0.4.0"
