[package]
name = "housecraft"
version = "0.3.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
comfy-table = "7.1.1"
console = "0.15.8"
csv = "1.3.0"
env_logger = "0.11.5"
highs-sys = { version = "1.6.4", features = ["highs_release", "ninja"] }
indexmap = { version = "2.6.0", features = ["serde"] }
lazy_static = "1.5.0"
log = "0.4.22"
mimalloc = { version = "0.1.43", default-features = false }
num_cpus = "1.16.0"
once_cell = "1.20.2"
rayon = "1.10.0"
regex = "1.11.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
stable-vec = "0.4.1"
